chore: update package-lock

--- a/package.json
+++ b/package.json
@@ -110,45 +110,44 @@
     "@npmcli/move-file": "npm:@npmcli/fs@latest",
     "are-we-there-yet": "npm:noop2@latest",
     "gauge": "npm:noop2@latest",
-    "glob": "^13.0.0",
+    "glob": "^13.0.2",
     "inflight": "npm:noop2@latest",
     "keygrip": "npm:noop2@latest",
     "npmlog": "npm:noop2@latest",
     "read-package-json": "npm:@npmcli/package-json@latest",
-    "rimraf": "^6.0.0"
+    "rimraf": "^6.1.2"
   },
   "dependencies": {
-    "cheerio": "^1.1.2",
-    "recursive-copy": "^2.0.14"
+    "linkedom": "^0.18.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.28.5",
-    "@babel/eslint-parser": "^7.28.5",
+    "@babel/core": "^7.29.0",
+    "@babel/eslint-parser": "^7.28.6",
     "@babel/eslint-plugin": "^7.27.1",
-    "@commitlint/cli": "^20.3.1",
-    "@commitlint/config-conventional": "^20.3.1",
-    "@commitlint/config-workspace-scopes": "^20.2.0",
-    "@html-eslint/eslint-plugin": "^0.52.1",
-    "@html-eslint/parser": "^0.52.0",
+    "@commitlint/cli": "^20.4.1",
+    "@commitlint/config-conventional": "^20.4.1",
+    "@commitlint/config-workspace-scopes": "^20.4.0",
+    "@html-eslint/eslint-plugin": "^0.54.2",
+    "@html-eslint/parser": "^0.54.0",
     "commit-and-tag-version": "^12.6.1",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-lit": "^2.1.1",
+    "eslint-plugin-lit": "^2.2.1",
     "eslint-plugin-lit-a11y": "^5.1.1",
-    "eslint-plugin-wc": "^3.0.2",
-    "globals": "^17.0.0",
+    "eslint-plugin-wc": "^3.1.0",
+    "globals": "^17.3.0",
     "husky": "^9.1.7",
-    "lerna": "^9.0.3",
+    "lerna": "^9.0.4",
     "lint-staged": "^16.2.7",
     "postcss": "^8.5.6",
-    "prettier": "^3.7.4",
-    "sort-package-json": "^3.6.0",
-    "stylelint": "^16.26.1",
-    "stylelint-config-standard-scss": "^16.0.0",
+    "prettier": "^3.8.1",
+    "sort-package-json": "^3.6.1",
+    "stylelint": "^17.2.0",
+    "stylelint-config-standard-scss": "^17.0.0",
     "tslib": "^2.8.1",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.52.0"
+    "typescript-eslint": "^8.55.0"
   },
   "commit-and-tag-version": {
     "releaseCommitMessageFormat": "chore: release {{currentTag}}",
